--- a/replay-playground/public/index.html
+++ b/replay-playground/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="path/to/hack.css">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
